fix text spacing

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ body {
   outline-color: red !important;
 }
 
-a, h2 {
+a, h2, p {
  color: white;
- margin: 0 10px;
+ margin: 5px 10px;
 }
 
 a:hover {
